--- a/views/errorPage.hbs
+++ b/views/errorPage.hbs
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Error!</h1>
+    <div action='/error'>
+        <h1>Error!</h1>
+
+    </div>
 </body>
+
 </html>
