--- a/views/users.hbs
+++ b/views/users.hbs
@@ -10,11 +10,11 @@
 <body>
     <br>
     <h2>Welcome!</h2>
-    <form action="/">
+    <form action="/" method="GET"
         <input type="submit" value="Home">
     </form>
     <hr>
-    <form action="/logout" method="get">
+    <form action="/logout" method="GET">
         <input type="submit" value="Logout">
     </form>
         <hr>
