--- a/views/register.hbs
+++ b/views/register.hbs
@@ -9,19 +9,21 @@
 
 <body>
     <div>
-        <form action="/">
+        <form action="/" method="GET">
             <input type="submit" value="Home">
         </form>
         <hr>
-        <h3>Please sign-in</h3>
+        <h3>Please register</h3>
     </div>
-    <form action="/login" method="POST">
-        <input type="text" name="email" placeholder="Enter email" required="true">
+
+    <form action="/register" method="POST">
+        <input type="text" name="name" placeholder="Enter name">
         <br>
-        <input type="password" name="password" placeholder="Enter password" required="true">
-        <hr>
+        <input type="text" name="email" placeholder="Enter email">
+        <br>
+        <input type="password" name="password" placeholder="Create Password">
+        <br>
         <input type="submit" value="Submit">
-        <hr>
     </form>
 </body>
 
