--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,7 +13,7 @@
             <input type="submit" value="Home">
         </form>
         <hr>
-        <h3>Please sign-in</h3>
+        <h3>Please log-in</h3>
     </div>
     <form action="/login" method="POST">
         <input type="text" name="email" placeholder="Enter email" required="true">
