--- a/views/errorPage.hbs
+++ b/views/errorPage.hbs
@@ -8,10 +8,29 @@
 </head>
 
 <body>
-    <div>
+    <div class="text">
         <h1>Error!</h1>
 
     </div>
 </body>
+
+<style>
+    * {
+        font-family: sans-serif;
+    }
+
+    .text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        background-color: rgb(218, 10, 10);
+        height: 50px;
+        margin: 15px;
+        padding: 10px;
+        border-radius: 16px;
+        font-size: 20px;
+    }
+</style>
 
 </html>
