--- a/views/main.hbs
+++ b/views/main.hbs
@@ -8,22 +8,63 @@
 </head>
 
 <body>
-    <div>
-        <h2>Main page</h2>
-        <hr>
+    <div style="text-align:center">
+        <div class="text">
+            <h2>Main page</h2>
+        </div>
+        <div class="vertical-center">
+            <form action="/login" method="GET">
+                <button type="submit"> Login
+                </button>
+            </form>
+            <form action="/register" method="GET">
+                <div style="margin:15px;">
+                    <b>or</b>
+                </div>
+                <button type="submit"> Register
+                </button>
+            </form>
+        </div>
+
+
     </div>
-    
-    <form action="/login" method="GET">
-        <button type="submit"> Login
-        </button>
-    </form>
-    <hr>
-    <form action="/register" method="GET">
-        <b>or </b>
-        <button type="submit"> Register
-        </button>
-    </form>
-    <hr>
 </body>
+
+<style>
+    * {
+        font-family: sans-serif;
+    }
+
+    button {
+        color: rgb(0, 0, 0);
+        background-color: rgb(255, 255, 255);
+        width: 150px;
+        height: 50px;
+        border: 0px solid black;
+        border-radius: 16px;
+        font-size: 18px;
+        box-shadow: 0px 0px 12px 7px rgba(0, 0, 0, 0.19);
+        margin: 15px;
+    }
+
+    .vertical-center {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        background-color: rgb(95, 126, 109);
+        height: 50px;
+        margin: 15px;
+        padding: 10px;
+        border-radius: 16px;
+    }
+</style>
 
 </html>
