--- a/views/errorPage.hbs
+++ b/views/errorPage.hbs
@@ -10,7 +10,11 @@
 <body>
     <div class="text">
         <h1>Error!</h1>
-
+    </div>
+    <div class="center">
+        <form action="/" method="GET">
+            <input class="button" type="submit" value="Home">
+        </form>
     </div>
 </body>
 
@@ -31,6 +35,27 @@
         border-radius: 16px;
         font-size: 20px;
     }
+
+    .button {
+        color: white;
+        background-color: rgb(139, 139, 160);
+        width: 150px;
+        height: 50px;
+        border: 0px solid black;
+        border-radius: 16px;
+        font-size: 18px;
+        margin: 15px;
+    }
+
+    .flex-row {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .center {
+        text-align: center;
+    }
+
 </style>
 
 </html>
