--- a/views/users.hbs
+++ b/views/users.hbs
@@ -9,14 +9,22 @@
 
 <body>
     <div>
-        <div class="text center">Welcome! {{userName}}</div>
+        <div class="text center">
+            <h2>
+                Welcome on board
+            </h2>
+            <hr>
+            <h2 style="color: rgb(63, 48, 48);">
+                {{loggedUser}}
+            </h2>
+            <form action="/logout" method="POST">
+                <input class="button" style="background-color: red" type="submit" value="Logout">
+            </form>
+        </div>
 
         <div class="flex-row">
             <form action="/" method="GET">
                 <input class="button" type="submit" value="Home">
-            </form>
-            <form action="/logout" method="POST">
-                <input class="button" style="background-color: red" type="submit" value="Logout">
             </form>
         </div>
     </div>
@@ -25,7 +33,7 @@
         <div class="user">
             <div>
                 <b>
-                {{this.name}}, 
+                    {{this.name}},
                 </b>
                 email: {{this.email}}
             </div>
@@ -72,7 +80,7 @@
 
     .user {
         display: flex;
-        
+
         align-items: center;
         color: rgb(0, 0, 0);
         background-color: rgb(255, 255, 255);
