--- a/views/errorPage.hbs
+++ b/views/errorPage.hbs
@@ -9,7 +9,7 @@
 
 <body>
     <div class="text">
-        <h1>Error! {{errorMessage}}</h1>
+        <h1>Error! {{message}}</h1>
     </div>
     <div class="center">
         <form action="/" method="GET">
