--- a/views/users.hbs
+++ b/views/users.hbs
@@ -15,7 +15,7 @@
             </h2>
             <hr>
             <h2 style="color: rgb(63, 48, 48);">
-                {{loggedUser}}
+                {{name}}
             </h2>
             <form action="/logout" method="POST">
                 <input class="button" style="background-color: red" type="submit" value="Logout">
