--- a/views/main.hbs
+++ b/views/main.hbs
@@ -13,15 +13,15 @@
             <h2>Main page</h2>
         </div>
         <div class="vertical-center">
-            <form action="/login" method="GET">
+            <form action="/auth" method="GET">
                 <button type="submit"> Login
                 </button>
             </form>
-            <form action="/register" method="GET">
+            <form action="/create" method="GET">
                 <div style="margin:15px;">
                     <b>or</b>
                 </div>
-                <button type="submit"> Register
+                <button type="submit"> Create
                 </button>
             </form>
         </div>
