--- a/views/users.hbs
+++ b/views/users.hbs
@@ -17,7 +17,7 @@
             <h2 style="color: rgb(63, 48, 48);">
                 {{name}}
             </h2>
-            <form action="/logout" method="POST">
+            <form action="/auth" method="GET">
                 <input class="button" style="background-color: red" type="submit" value="Logout">
             </form>
         </div>
