--- a/views/users.hbs
+++ b/views/users.hbs
@@ -20,6 +20,9 @@
             <form action="/auth" method="GET">
                 <input class="button" style="background-color: red" type="submit" value="Logout">
             </form>
+            <form action="/create" method="DELETE">
+                <input class="button" style="background-color: red" type="submit" value="Delete">
+            </form>
         </div>
 
         <div class="flex-row">
