--- a/email-templates/template.pug
+++ b/email-templates/template.pug
@@ -1,11 +1,12 @@
 doctype html
 html
     head
-        include style.css
+        style
+            include style.css
     body
         div
             block content
-        div.footer
+        div(class='footer')
             | Best regards
             br
             | June-2020
